Добавил сервис реализующий логику подсчёта счёта матча по очкам/геймам/сетам